# cs1230-final-project

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/raytracer/: intersect.cpp  intersect.h  intersection.cpp  intersection.h  phong.cpp  phong.h  ray.cpp  ray.h  raytracer.cpp  raytracer.h  raytracescene.cpp  raytracescene.h  sdfshape.cpp  sdfshape.h
src/raytracer/shapes/: mandelbulb.cpp  mandelbulb.h  plane.cpp  plane.h  sierpinski.cpp  sierpinski.h  sphere.cpp  sphere.h  testshape.cpp  testshape.h  torus.cpp  torus.h
src/utils/: scenedata.h  scenefilereader.cpp  scenefilereader.h  sceneparser.cpp  sceneparser.h  util.cpp  util.h
